# obscell

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
contracts/ckb-auth/: Makefile  README.md
contracts/ct-info-type/: Cargo.toml  README.md
contracts/ct-info-type/src/: main.rs
contracts/ct-token-type/: Cargo.toml  README.md
contracts/ct-token-type/src/: main.rs
contracts/stealth-lock/: Cargo.toml  README.md  build.rs
contracts/stealth-lock/src/: main.rs
deployment/testnet/: deploy.json  deployment.toml  info.json  update-tx.json
deployment/testnet/migrations/: 2025-12-04-052449.json  2026-02-12-024020.json  2026-02-13-150122.json  2026-02-14-023551.json
docs/: CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README_CN.md  VISUAL_GUIDE.md  ct-info-type-design.md
native-simulators/ckb-auth-sim/: Cargo.toml
native-simulators/ckb-auth-sim/src/: lib.rs
native-simulators/ct-info-type-sim/: Cargo.toml
native-simulators/ct-info-type-sim/src/: lib.rs
native-simulators/ct-token-type-sim/: Cargo.toml
native-simulators/ct-token-type-sim/src/: lib.rs
native-simulators/stealth-lock-sim/: Cargo.toml
native-simulators/stealth-lock-sim/src/: lib.rs
tests/: Cargo.toml
tests/src/: tests.rs
