[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ct-token-type",
  "contracts/ct-info-type",
  "contracts/stealth-lock",
  "native-simulators/ct-token-type-sim",
  "native-simulators/ct-info-type-sim",
  "native-simulators/stealth-lock-sim",
  "native-simulators/ckb-auth-sim",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
