[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
ckb-testtool = "1.0"
serde_json = "1.0"
secp256k1 = { version = "0.31", features = ["rand", "global-context", "recovery"] }
rand = "0.9"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
bulletproofs = { git = "https://github.com/zkcrypto/bulletproofs", default-features = false }
merlin = { version = "3", default-features = false }
rand_core = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
