[package]
name = "ct-info-type"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = { version = "1.0", features = ["type-id"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
