[package]
name = "ckb-auth-sim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
ckb-std = { version = "1.0", features = ["native-simulator"] }
secp256k1 = { version = "0.29", features = ["recovery"] }
blake2b-rs = "0.2"
ctor = "0.6"
