[package]
name = "ct-token-type-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
ct-token-type = { path = "../../contracts/ct-token-type", features = ["native-simulator"] }
ckb-std = { version = "1.0", features = ["native-simulator"] }
ctor = "0.6"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
