[package]
name = "stealth-lock-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
stealth-lock = { path = "../../contracts/stealth-lock", features = ["native-simulator"] }
ckb-std = { version = "1.0", features = ["native-simulator"] }
ctor = "0.6"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
